# kafky

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  errors.rs  main.rs
src/client/: admin.rs  consumer.rs  consumer_group.rs  kafky_client.rs  metadata.rs  mod.rs  offset.rs  producer.rs  watermark.rs
src/cmd/: command.rs  config.rs  consume.rs  create.rs  delete.rs  get.rs  get_consumer_groups.rs  get_topic.rs  mod.rs  produce.rs  root.rs  show.rs
