[package]
name = "kafky"
version = "0.1.0"
edition = "2021"
authors = ["n3wtron@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
clap = "2.33.3"
home = "0.5.3"
serde = { version = "1.0.130", features = ["derive"] }
config = "0.11.0"
thiserror = "1.0"
rdkafka = { version = "0.25", features = ["cmake-build", "ssl"] }
gethostname = "0.2.1"
strum = "0.22"
strum_macros = "0.22"
